// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`<RadioGroup /> snapshot should render the same, with <RadioGroup.Button /> 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,15 +6,15 @@
      <div
        class=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
      >
        <label
          class=\\"RadioButton-sc-1q7g63p-3 jYJGZV\\"
-         for=\\"radio-button-9\\"
+         for=\\"radio-button-12\\"
        >
          <input
            class=\\"HiddenInput-sc-14w753s-0 eLqPtD\\"
-           id=\\"radio-button-9\\"
+           id=\\"radio-button-12\\"
            name=\\"foo\\"
            type=\\"radio\\"
            value=\\"Foo\\"
          />
          Foo
@@ -23,15 +23,15 @@
      <div
        class=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
      >
        <label
          class=\\"RadioButton-sc-1q7g63p-3 jYJGZV\\"
-         for=\\"radio-button-10\\"
+         for=\\"radio-button-13\\"
        >
          <input
            class=\\"HiddenInput-sc-14w753s-0 eLqPtD\\"
-           id=\\"radio-button-10\\"
+           id=\\"radio-button-13\\"
            name=\\"foo\\"
            type=\\"radio\\"
            value=\\"Bar\\"
          />
          Bar
@@ -40,15 +40,15 @@
      <div
        class=\\"RadioButton__Wrapper-sc-1q7g63p-2\\"
      >
        <label
          class=\\"RadioButton-sc-1q7g63p-3 jYJGZV\\"
-         for=\\"radio-button-11\\"
+         for=\\"radio-button-14\\"
        >
          <input
            class=\\"HiddenInput-sc-14w753s-0 eLqPtD\\"
-           id=\\"radio-button-11\\"
+           id=\\"radio-button-14\\"
            name=\\"foo\\"
            type=\\"radio\\"
            value=\\"Baz\\"
          />
          Baz"
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  class="c0 c1"
  role="radiogroup"
>
  <div
    class=""
  >
    <label
      class="c2"
      for="radio-button-3"
    >
      <input
        class="c3"
        id="radio-button-3"
        name="groceries"
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c2"
      for="radio-button-4"
    >
      <input
        class="c3"
        id="radio-button-4"
        name="groceries"
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c2"
      for="radio-button-5"
    >
      <input
        class="c3"
        id="radio-button-5"
        name="groceries"
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> inline 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c4 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c2:last-child {
  margin-right: 0;
}

.c3 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  class="c0 c1"
  role="radiogroup"
>
  <div
    class="c2"
  >
    <label
      class="c3"
      for="radio-button-6"
    >
      <input
        class="c4"
        id="radio-button-6"
        name="groceries"
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    class="c2"
  >
    <label
      class="c3"
      for="radio-button-7"
    >
      <input
        class="c4"
        id="radio-button-7"
        name="groceries"
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    class="c2"
  >
    <label
      class="c3"
      for="radio-button-8"
    >
      <input
        class="c4"
        id="radio-button-8"
        name="groceries"
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Radio /> 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  class="c0 c1"
  role="radiogroup"
>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="groceries"
      type="radio"
      value="Foo"
    />
    <span
      class="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="groceries"
      type="radio"
      value="Bar"
    />
    <span
      class="c6 c7"
    />
    <span>
      Bar
    </span>
  </label>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="groceries"
      type="radio"
      value="Baz"
    />
    <span
      class="c6 c7"
    />
    <span>
      Baz
    </span>
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot simple with button options 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c2 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  position: relative;
}

<div
  class="c0 c1"
  role="radiogroup"
>
  <div
    class=""
  >
    <label
      class="c2"
      for="radio-button-0"
    >
      <input
        class="c3"
        id="radio-button-0"
        name="foo"
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c2"
      for="radio-button-1"
    >
      <input
        class="c3"
        id="radio-button-1"
        name="foo"
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    class=""
  >
    <label
      class="c2"
      for="radio-button-2"
    >
      <input
        class="c3"
        id="radio-button-2"
        name="foo"
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with options 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  class="c0 c1"
  role="radiogroup"
>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="foo"
      type="radio"
      value="Foo"
    />
    <span
      class="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="foo"
      type="radio"
      value="Bar"
    />
    <span
      class="c6 c7"
    />
    <span>
      Bar
    </span>
  </label>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="foo"
      type="radio"
      value="Baz"
    />
    <span
      class="c6 c7"
    />
    <span>
      Baz
    </span>
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot with an error 1`] = `
.c8 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked ~ .c6 {
  border-color: #e91b0c;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #e91b0c;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c3 .c6 {
  border-color: #e91b0c;
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  class="c0 c1"
  role="radiogroup"
>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="groceries"
      type="radio"
      value="Foo"
    />
    <span
      class="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
  <span
    class="c8"
  >
    Error text
  </span>
</div>
`;

exports[`<RadioGroup /> snapshot with required 1`] = `
.c2 {
  display: block;
  margin-bottom: 5px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c5 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c7 {
  border-radius: 50%;
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c7:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c3 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 .c4:checked ~ .c6 {
  border-color: #1250C4;
}

.c3 .c4:checked ~ .c6:after {
  background-color: #1250C4;
  display: block;
}

.c3 .c4:focus ~ .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3:hover .c6,
.c3:focus .c6 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c3 .c4:checked:disabled ~ .c6 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c1 {
  position: relative;
}

<div
  class="c0 c1"
  role="radiogroup"
>
  <label
    class="c2 c3"
  >
    <input
      class="c4 c5"
      name="groceries"
      required=""
      type="radio"
      value="Foo"
    />
    <span
      class="c6 c7"
    />
    <span>
      Foo
    </span>
  </label>
</div>
`;
